tests/baselines/reference/divergentAccessors1.errors.txt
tests/cases/compiler/divergentAccessors1.ts(6,13): error TS1049: A 'set' accessor must have exactly one parameter.
tests/cases/compiler/divergentAccessors1.ts(10,5): error TS2322: Type 'string' is not assignable to type 'number'.
tests/cases/compiler/divergentAccessors1.ts(17,13): error TS1049: A 'set' accessor must have exactly one parameter.
tests/cases/compiler/divergentAccessors1.ts(21,5): error TS2322: Type 'string' is not assignable to type 'number'.


==== tests/cases/compiler/divergentAccessors1.ts (4 errors) ====
    // Accessors in interfaces/types
    
    {
        interface IHasGetSet {
            get foo(): number;
            set foo(): number | string;
                ~~~
!!! error TS1049: A 'set' accessor must have exactly one parameter.
        }
        
        const ihgs: IHasGetSet = null as any;
        ihgs.foo = "32";
        ~~~~~~~~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
        let r_ihgs_foo: number = ihgs.foo;
    }
    
    {
        type T_HasGetSet = {
            get foo(): number;
            set foo(): number | string;
                ~~~
!!! error TS1049: A 'set' accessor must have exactly one parameter.
        }
        
        const t_hgs: T_HasGetSet = null as any;
        t_hgs.foo = "32";
        ~~~~~~~~~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
        let r_t_hgs_foo: number = t_hgs.foo;
    }
    